--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "",
-  "author": "Planet Sabun <planetsabun.inc@gmail.com>",
+  "author": "planetsabun <planetsabun.inc@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
